--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900");
+
 * {
     margin: 0;
     padding: 0;
@@ -7,10 +9,61 @@
 
 body {
     height: 100vh;
-    display: flex;
+    display: grid;
     align-items: center;
     justify-content: center;
-    background: #e0e3eb;
+    background: #000;
+    grid-template-columns: repeat(1);
+}
+
+.name h2 {
+    color: #fff;
+	font-size: 45px;
+    text-align: center;
+    transform: translate(-17%, -10% );
+    position: absolute;
+    font-family: "Poppins", sans-serif;
+}
+
+.name h2:nth-child(1) {
+    color: transparent;
+    -webkit-text-stroke: 2px #03A9f4;
+}
+
+.name h2:nth-child(2) {
+    color: #03A9f4;
+    animation: animate 4s ease-in-out infinite;
+}
+
+@keyframes animate {
+    0%,
+    100% {
+        clip-path: polygon(
+            0% 45%,
+            16% 44%,
+            33% 50%,
+            54% 60%,
+            70% 61%,
+            84% 59%,
+            100% 52%,
+            100% 100%,
+            0% 100%
+        );
+    }
+
+    50% {
+		clip-path: polygon(
+			0% 60%,
+			15% 65%,
+			34% 66%,
+			51% 62%,
+			67% 50%,
+			84% 45%,
+			100% 46%,
+			100% 100%,
+			0% 100%
+		);
+    }
 }
 
 .container {
@@ -20,7 +73,8 @@ body {
     border-radius: 12px;
     padding: 10px 20px 20px;
     background: white;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 5px 10px rgba(255, 150, 210, 10);
+    transform: translateY(25%);
 }
 
 .display {
